--- a/project_template/pyproject.toml
+++ b/project_template/pyproject.toml
@@ -22,3 +22,7 @@ addopts = "-ra -q"
 testpaths = [
     "tests",
 ]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "smoke: business core tests",
+]
